後端版本更新 (1.0.2 -> 1.0.3)
feat:
  1. 新增客戶應收統計表 API
  2. 新增備份 SQL 並下載的 API

--- a/api_zc/appsettings.json
+++ b/api_zc/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Version": "1.0.2", // 版本號
+  "Version": "1.0.3",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,7 +8,12 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "bGavd7v8AB9M7QYQ", // 密鑰
-    "ExpireMinutes": 60 // 過期時間
+    "Key": "bGavd7v8AB9M7QYQ",
+    "ExpireMinutes": 60
+  },
+  "BackupSettings": {
+    "BackupPath": "App_Data/Backups",
+    "CommandTimeout": 300,
+    "RetentionCount": 7
   }
 }
